# quickwit

./: Cargo.toml
distribution/docker/alpine/: Dockerfile
docs/guides/: aws-setup.md
quickwit-cli/src/: index.rs  split.rs
quickwit-cli/tests/: cli.rs
quickwit-common/src/: net.rs
quickwit-config/: Cargo.toml
quickwit-config-macros/: Cargo.toml
quickwit-config-macros/src/: lib.rs
quickwit-config/src/: config.rs  config_value.rs  index_config.rs  lib.rs
quickwit-core/src/: index.rs  lib.rs
quickwit-indexing/failpoints/: mod.rs
quickwit-indexing/src/: garbage_collection.rs  lib.rs  merge_policy.rs  test_utils.rs
quickwit-indexing/src/actors/: garbage_collector.rs  indexing_pipeline.rs  ingest_api_garbage_collector.rs  merge_executor.rs  merge_planner.rs  merge_split_downloader.rs  mod.rs  uploader.rs
quickwit-indexing/src/models/: scratch_directory.rs
quickwit-indexing/src/split_store/: indexing_split_store.rs  local_split_store.rs  mod.rs
quickwit-janitor/: Cargo.toml
quickwit-janitor/src/actors/: mod.rs  retention_executor.rs
quickwit-metastore/: Cargo.toml
quickwit-metastore/src/: lib.rs  split_metadata.rs  tests.rs
quickwit-metastore/src/backward_compatibility_tests/: file_backed_index.rs
quickwit-metastore/src/metastore/: index_metadata.rs  mod.rs  postgresql_metastore.rs  postgresql_model.rs
quickwit-search/src/: lib.rs  tests.rs
quickwit-search/src/search_stream/: leaf.rs
quickwit-serve/src/: lib.rs
quickwit-serve/src/index_api/: rest_handler.rs
quickwit/quickwit-common/src/: lib.rs  registry.rs
(+13 files in other folders)
