[package]
name = "quickwit-config-macros"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial license, contact hello@quickwit.io
description = "Quickwit configuration"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }